# RaumAkustik

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  conanfile.txt  requirements.txt
src/: CMakeLists.txt
src/app/: AudioInputView.hpp  CMakeLists.txt  CommandIDs.hpp  FirstReflectionsView.cpp  FirstReflectionsView.hpp  LookAndFeel.cpp  LookAndFeel.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  MenuBar.cpp  MenuBar.hpp  PorousAbsorberSimulationView.cpp  PorousAbsorberSimulationView.hpp  RaumAkustikApplication.cpp
src/lib/: CMakeLists.txt
src/lib/mc/: RaumAkustik.hpp  acoustics.hpp
src/lib/mc/RaumAkustik/: Air.cpp  Air.hpp  Air.test.cpp  FEM.hpp  FEM.test.cpp  FirstReflection.hpp  FirstReflection.test.cpp  PorousAbsorber.cpp  PorousAbsorber.hpp  PorousAbsorber.test.cpp  Units.hpp  Units.test.cpp
src/lib/mc/acoustics/: Air.cpp  Air.hpp  Air.test.cpp  PorousAbsorber.cpp  PorousAbsorber.hpp  PorousAbsorber.test.cpp  Units.hpp  sweep.cpp  sweep.hpp
src/lib/mc/generator/: sweep.cpp  sweep.hpp
src/lib/mc/unit/: frequency.cpp  pressure.hpp  speed.hpp  temperature.hpp
src/mc/acoustics/: air.cpp  air.hpp  air.test.cpp
src/mc/acoustics/absorber/: porous_absorber.cpp  porous_absorber.hpp  porous_absorber.test.cpp
src/mc/acoustics/reflection/: first_reflection.hpp  first_reflection.test.cpp
src/mc/generator/: oscillator.hpp  sweep.cpp  sweep.hpp
src/mc/raum_akustik/: AudioInputView.cpp  CMakeLists.txt  FirstReflectionsView.hpp  MainComponent.cpp  PorousAbsorberSimulationView.cpp
src/mc/raum_akustik/app/: application.cpp  application.hpp  command_ids.hpp  main.cpp  main_component.cpp  main_component.hpp  menu_bar.cpp  menu_bar.hpp
src/mc/raum_akustik/look/: look_and_feel.cpp  look_and_feel.hpp
src/mc/raum_akustik/tabs/: absorber_simulation_tab.cpp  absorber_simulation_tab.hpp  audio_input_tab.cpp  audio_input_tab.hpp  first_reflections_tab.cpp  first_reflections_tab.hpp  generator_tab.cpp  generator_tab.hpp
src/mc/raum_akustik/tool/: latency_tester.cpp  latency_tester.hpp  measurement_recorder.cpp  measurement_recorder.hpp  noise_generator.cpp  noise_generator.hpp
src/mc/raum_akustik/widget/: level_meter.cpp  level_meter.hpp  scrolling_waveform.cpp  scrolling_waveform.hpp  spectogram.cpp  spectogram.hpp
src/mc/unit/: density.hpp  frequency.cpp  frequency.hpp  frequency.test.cpp  heat_capacity.hpp  pressure.hpp  speed.hpp  temperature.hpp
src/ra/acoustic/: Air.cpp  Air.test.cpp  FirstReflection.hpp  FirstReflection.test.cpp  ReverberationTime.hpp  ReverberationTime.test.cpp  Room.hpp  SchroederFrequency.hpp  SchroederFrequency.test.cpp  StochasticRaytracing.cpp  StochasticRaytracing.hpp  WaveEquation2D.cpp  WaveEquation2D.hpp
src/ra/acoustic/absorber/: PorousAbsorber.cpp  PorousAbsorber.hpp  PorousAbsorber.test.cpp
src/ra/acoustics/: air.cpp  air.hpp  air.test.cpp  room.hpp  stochastic_raytracing.cpp  stochastic_raytracing.hpp
src/ra/acoustics/absorber/: porous_absorber.cpp  porous_absorber.hpp  porous_absorber.test.cpp
src/ra/acoustics/reflection/: first_reflection.test.cpp
src/ra/generator/: GlideSweep.cpp  GlideSweep.hpp  SineOscillator.hpp  SineSweep.cpp  SineSweep.hpp  sweep.cpp  sweep.hpp
src/ra/geometry/: Vec3.hpp
src/ra/math/: vec3.hpp
src/ra/raum_akustik/: CMakeLists.txt
src/ra/raum_akustik/app/: application.cpp  command_ids.hpp  main.cpp  main_component.cpp  main_component.hpp  menu_bar.cpp
src/ra/raum_akustik/look/: color.hpp  look_and_feel.cpp
src/ra/raum_akustik/tabs/: absorber_simulation_tab.cpp  absorber_simulation_tab.hpp  audio_input_tab.cpp  audio_input_tab.hpp  first_reflections_tab.cpp  generator_tab.cpp  generator_tab.hpp  material_editor.cpp  material_editor.hpp  room_editor.cpp  room_editor.hpp  stochastic_raytracing_tab.cpp  stochastic_raytracing_tab.hpp
src/ra/raum_akustik/tool/: audio_file.hpp  latency_tester.cpp  latency_tester.hpp  measurement_recorder.cpp  measurement_recorder.hpp  noise_generator.hpp
src/ra/raum_akustik/widget/: level_meter.cpp
src/ra/unit/: frequency.cpp  frequency.hpp  frequency.test.cpp  heat_capacity.hpp  pressure.hpp  speed.hpp  temperature.hpp  unit.hpp
tool/RaumAkustik/: CMakeLists.txt
tool/RaumAkustik/app/: MainComponent.cpp  MainComponent.hpp  MenuBar.cpp  application.cpp  main.cpp  main_component.cpp  main_component.hpp  menu_bar.cpp
tool/RaumAkustik/application/: Application.cpp  CommandIDs.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  MenuBar.cpp  Settings.cpp  Settings.hpp
tool/RaumAkustik/component/: LevelMeter.hpp  ScrollingWaveform.cpp  Spectogram.cpp
tool/RaumAkustik/editor/: AudioInterfaceEditor.hpp  MaterialEditor.cpp  PorousAbsorberEditor.cpp  RoomEditor.cpp  StochasticRaytracingEditor.cpp  StochasticRaytracingEditor.hpp  ToneGeneratorEditor.cpp  ToneGeneratorEditor.hpp  WaveEquation2DEditor.cpp  WaveEquation2DEditor.hpp
tool/RaumAkustik/look/: ColorMap.hpp  ColorRGB.hpp  LookAndFeel.cpp  LookAndFeel.hpp  color.hpp
tool/RaumAkustik/project/: ProjectTreeViewRoot.cpp  ProjectTreeViewRoot.hpp
tool/RaumAkustik/tabs/: AudioInterfaceEditor.cpp  AudioInterfaceEditor.hpp  MaterialEditor.cpp  MaterialEditor.hpp  PorousAbsorberEditor.cpp  PorousAbsorberEditor.hpp  RoomEditor.cpp  StochasticRaytracingEditor.cpp  StochasticRaytracingEditor.hpp  ToneGeneratorEditor.cpp  ToneGeneratorEditor.hpp  WaveEquation2DEditor.cpp  WaveEquation2DEditor.hpp  absorber_simulation_tab.cpp  audio_input_tab.cpp  audio_input_tab.hpp  generator_tab.cpp  generator_tab.hpp  material_editor.cpp  material_editor.hpp  room_editor.cpp  stochastic_raytracing_tab.cpp  stochastic_raytracing_tab.hpp
tool/RaumAkustik/tool/: LatencyTester.cpp  LatencyTester.hpp  MeasurementRecorder.cpp  MeasurementRecorder.hpp  NoiseGenerator.cpp  PropertyComponent.hpp  latency_tester.cpp  measurement_recorder.cpp  measurement_recorder.hpp
tool/RaumAkustik/utility/: ValueTree.hpp
tool/RaumAkustik/widget/: LevelMeter.cpp  scrolling_waveform.cpp  spectogram.hpp
(+83 files in other folders)
